@@ -11,6 +11,17 @@ metricbeat:
           type: metrics
           dataset: docker.status
           namespace: default
+  - module: docker
+    metricsets: [info]
+    index: metrics-generic-default
+    hosts: ["http://127.0.0.1:8080"]
+    processors:
+    - add_fields:
+        target: "stream"
+        fields:
+          type: metrics
+          dataset: generic
+          namespace: default
   - module: apache
     metricsets: [info]
     index: metrics-generic-testing
