@@ -3,6 +3,7 @@ cmd: filebeat
 args: ["-E", "setup.ilm.enabled=false", "-E", "setup.template.enabled=false", "-E", "management.mode=x-pack-fleet", "-E", "management.enabled=true", "-E", "logging.level=debug"]
 configurable: grpc
 rules:
+- fix_stream: {}
 - inject_index:
     type: logs
 
