@@ -39,7 +39,8 @@
 - Remove fleet admin from setup script {pull}18611[18611]
 - Correctly report platform and family. {issue}18665[18665]
 - Clean action store after enrolling to new configuration {pull}18656[18656]
- [Ingest Manager] Avoid watching monitor logs {pull}18723[18723]
+- Avoid watching monitor logs {pull}18723[18723]
+- Guard against empty stream.datasource and namespace {pull}18769[18769]
 
 ==== New features
 
